put some basic html structure and import mathjax

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Aditya's website.
+    </title>
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js">
+    </script>
+  </head>
+
+  <body>
+    <h1>
+      Aditya's website.
+    </h1>
+    <p>
+      Hello world!
+    </p>
+    <p>
+      In an effort to learn some HTML and CSS,
+      I am making this whole site from scratch.
+    </p>
+    <p>
+      MathJax test:
+      \(\pi_1(\mathbb R^3\setminus S^1) = S^1\vee S^2\)
+    </p>
+  </body>
+</html>
