index: fix math error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
     <p>
       MathJax test:
-      \(\pi_1(\mathbb R^3\setminus S^1) = S^1\vee S^2\)
+      \(\pi_1(\mathbb R^3\setminus S^1) = \pi_1(S^1\vee S^2) = \mathbb Z \)
     </p>
   </body>
 </html>
