mathcontests: create list of a whole bunch of lecture notes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       Aditya's website.
     </h1>
     <p>
-      Hello world!
+      Hello! I am Aditya, a second-year undergraduate mathematics student
+      at Stony Brook University.
     </p>
     <p>
       In an effort to learn some HTML and CSS,
@@ -22,6 +23,17 @@
     <p>
       MathJax test:
       \(\pi_1(\mathbb R^3\setminus S^1) = \pi_1(S^1\vee S^2) = \mathbb Z \)
+    </p>
+    <p>
+      Todo items:
+      <ul>
+	<li>
+	  <a href="mathcontests.html">high school math writings</a> (handouts and NYCTC)
+	</li>
+	<li>
+	  about page
+	</li>
+      </ul>
     </p>
   </body>
 </html>
