mathcontests: add NYCTC and NYCIML

--- a/mathcontests.html
+++ b/mathcontests.html
@@ -20,8 +20,8 @@
     <p>
       I was a member of the NYC Math Team and the Stuyvesant High School math team,
       and am still involved with them.
-      Among my activities as a math team student were
-      writing short articles on various topics
+      Among my math team-related activities are
+      writing short articles on various topics (often to supplement lectures)
       and writing problems for math contests.
     </p>
     <h2>
@@ -90,8 +90,60 @@
     <h2>
       Contest writing
     </h2>
+    <p>
+      The New York City Team Contest (NYCTC) is a 30-problem, two-hour long
+      marathon style contest, where teams of four are given two problems at a time
+      and receive a new problem each time they submit one.
+      The contest happens at the end of each semester
+      and is written by the NYC Math Team's top students;
+      it is a highly anticipated event each time
+      and in recent years has had over 100 competitors across the city!
+      I had the privilege of writing the NYCTCs during my senior year.
+      The NYC Math Team website has an
+      <a href="https://www.nycmathteam.org/archive/nyctc/">archive</a>
+      of previous contests, but my two contests are also linked below.
+    </p>
     <ul>
-      todo
+      <li>
+	<a type="application/pdf" href="./MathTeamDocs/NYCTCF2023_probs.pdf">Problems</a>
+	and
+	<a type="application/pdf" href="./MathTeamDocs/NYCTCF2023_sols.pdf">solutions</a>
+	for the Fall 2023 iteration of the NYCTC
+	(unfortunately, the leaderboard link is lost to time).
+      </li>
+      <li>
+	<a type="application/pdf" href="./MathTeamDocs/NYCTCS2024_probs.pdf">Problems</a>
+	and
+	<a type="application/pdf" href="./MathTeamDocs/NYCTCS2024_sols.pdf">solutions</a>
+	for the Spring 2024 iteration of the NYCTC
+	(unfortunately, the leaderboard link is lost to time).
+      </li>
+    </ul>
+    <p>
+      The NYC Interscholastic Math League (NYCIML) is a contest
+      organized and written by NYC Math Team alumni.
+      Each contest consists of three pairs of two problems each,
+      and contestants are given 10 minutes per pair of problems.
+      During the 2024-25 school year, I wrote problems for the Senior A division,
+      which is the upper division among the two senior divisions;
+      the contests which I contributed to are below.
+      The NYCIML website has an
+      <a href="https://www.nyciml.org/free-past-contests">archive</a>
+      of past contests.
+    </p>
+    <ul>
+      <li>
+	<a type="application/pdf" href="./MathTeamDocs/NYCIML_Fall_2024_Problems.pdf">Problems</a>
+	and
+	<a type="application/pdf" href="./MathTeamDocs/NYCIML_Fall_2024_Solutions.pdf">solutions</a>
+	for the Fall 2024 Senior A NYCIML contests.
+      </li>
+      <li>
+	<a type="application/pdf" href="./MathTeamDocs/NYCIML_Spring_2025_Problems.pdf">Problems</a>
+	and
+	<a type="application/pdf" href="./MathTeamDocs/NYCIML_Spring_2025_Solutions.pdf">solutions</a>
+	for the Spring 2025 Senior A NYCIML contests.
+      </li>
     </ul>
   </body>
 </html>
